corrected paragraph spacing

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -111,7 +111,8 @@ summary h3 {
 details p,
 details ul,
 details ol {
-  margin-left: calc(var(--content-offset) + 1em);
+  /* margin-left: 500px */
+  margin-left: calc(var(--content-offset) + 3em);
   margin-top: 20;
   margin-bottom: 20;
   padding-bottom: 0.5em;
